[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/crafting_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/gui/crafting_manager.gd" type="Script" id=2]

[node name="crafting_manager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_panel" type="PanelContainer" parent="."]
margin_right = 192.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vmain_container" type="VBoxContainer" parent="main_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 249.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crafting_tile_name" type="Label" parent="main_panel/vmain_container"]
margin_right = 178.0
margin_bottom = 14.0
text = "Crafting "
align = 1

[node name="button1" type="Button" parent="main_panel/vmain_container"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 38.0
text = "Slice Apples"

[node name="recipe_panel" type="PanelContainer" parent="."]
visible = false
margin_left = 200.0
margin_right = 50.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recipe_container" type="VBoxContainer" parent="recipe_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 131.0

[node name="craft_button" type="Button" parent="recipe_panel/recipe_container"]
margin_right = 200.0
margin_bottom = 20.0
text = "Craft!"

[node name="crafting_button" parent="recipe_panel/recipe_container" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 124.0
size_flags_horizontal = 4
size_flags_vertical = 4
